--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,2 +1,6 @@
-name=My Something Project
-description=Say something about this template.
+name=example
+description=SBT template to create some Scala projects.
+scala_version=2.10.2
+sbt_version=0.12.4
+version=0.1-SNAPSHOT
+organization=com.example
